log
Tue 11 Apr 2023 08:33:27 PM UTC: 
 hashmap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
00b36c5
Tue 11 Apr 2023 08:33:37 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
9bb64e4
Tue 11 Apr 2023 08:40:55 PM UTC: 
 hashmap.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
e59f0f9
Tue 11 Apr 2023 08:41:21 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  4|5
total_score: 20/70
10a4f0c
Tue 11 Apr 2023 08:43:22 PM UTC: 
 hashmap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
9e0e1f7
Tue 11 Apr 2023 08:48:00 PM UTC: 
 hashmap.c | 13 ++++++++++---
 1 file changed, 10 insertions(+), 3 deletions(-)
 tests:  0|0
ef4ca80
Tue 11 Apr 2023 08:49:03 PM UTC: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
dc7d68a
Tue 11 Apr 2023 08:50:14 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
56012fa
Tue 11 Apr 2023 08:51:57 PM UTC: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  0|0
b121efe
Tue 11 Apr 2023 08:55:18 PM UTC: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
e06d895
Tue 11 Apr 2023 08:55:42 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
c10142f
Tue 11 Apr 2023 08:56:02 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:82:8: error: unused variable ‘indiceH’ [-Werror=unused-variable]
   82 |   long indiceH = hash(key, map->capacity);
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
9ec9607
Tue 11 Apr 2023 08:56:16 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:84:5: error: "/*" within comment [-Werror=comment]
   84 |     /*if (map->buckets[indiceH]->key == NULL)
      |      
hashmap.c: At top level:
hashmap.c:93:5: error: expected identifier or ‘(’ before ‘/’ token
   93 |   }*/
      |     ^
hashmap.c:95:1: error: expected identifier or ‘(’ before ‘}’ token
   95 | }
      | ^
hashmap.c: In function ‘searchMap’:
hashmap.c:93:3: error: control reaches end of non-void function [-Werror=return-type]
   93 |   }*/
      |   ^
cc1: all warnings being treated as errors
Compilation failed
13f8f9a
Tue 11 Apr 2023 08:56:40 PM UTC: 
 hashmap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  5|4
total_score: 30/70
c15b3ab
Tue 11 Apr 2023 08:58:13 PM UTC: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  8|3
total_score: 40/70
41bd4ac
Tue 11 Apr 2023 09:03:15 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  8|3
total_score: 40/70
853cfcc
Tue 11 Apr 2023 09:03:50 PM UTC: 
 hashmap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  11|2
total_score: 50/70
a87ecc1
Tue 11 Apr 2023 09:10:17 PM UTC: 
 hashmap.c | 21 +++++++++++++++++----
 1 file changed, 17 insertions(+), 4 deletions(-)
 tests:  12|2
total_score: 50/70
4adda0c
Tue 11 Apr 2023 09:10:51 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
406e4af
Tue 11 Apr 2023 09:11:52 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|2
total_score: 50/70
02a0a74
Tue 11 Apr 2023 09:12:05 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|2
total_score: 50/70
04e86c1
Wed 12 Apr 2023 01:14:54 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
42c0c6d
Wed 12 Apr 2023 01:15:16 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
f0e2f6c
Wed 12 Apr 2023 01:15:30 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|2
total_score: 50/70
ce296e9
Wed 12 Apr 2023 01:41:28 PM UTC: 
 hashmap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  12|2
total_score: 50/70
23b8f82
Wed 12 Apr 2023 01:42:25 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
39cb4fb
Wed 12 Apr 2023 01:43:00 PM UTC: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  15|2
total_score: 50/70
8027c25
Wed 12 Apr 2023 01:44:12 PM UTC: 
 hashmap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  15|2
total_score: 50/70
f3fddd4
Wed 12 Apr 2023 01:46:56 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  15|2
total_score: 50/70
773ec3b
Wed 12 Apr 2023 01:47:09 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  15|2
total_score: 50/70
465c42f
Wed 12 Apr 2023 01:48:59 PM UTC: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  13|2
total_score: 50/70
436ee2c
Wed 12 Apr 2023 01:58:19 PM UTC: 
 hashmap.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  15|2
total_score: 50/70
b1bcda1
Wed 12 Apr 2023 01:59:46 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  15|2
total_score: 50/70
27938a5
Wed 12 Apr 2023 02:05:05 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  14|2
total_score: 50/70
7b78156
Wed 12 Apr 2023 02:13:44 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  15|2
total_score: 50/70
6595bdd
Thu 13 Apr 2023 07:45:04 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  15|2
total_score: 50/70
ec41abe
Thu 13 Apr 2023 07:45:15 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  15|2
total_score: 50/70
7bf9fc5
Thu 13 Apr 2023 07:45:47 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  15|2
total_score: 50/70
641e228
Thu 13 Apr 2023 07:47:37 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  15|2
total_score: 50/70
d3665db
Thu 13 Apr 2023 07:58:29 PM UTC: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  15|2
total_score: 50/70
730b447
